--- a/table.css
+++ b/table.css
@@ -3,3 +3,10 @@ table, th, td {
   border-style: double;
   width: 100%;
 }
+
+td{
+  padding-top:2px;
+  padding-bottom:2px;
+  padding-right:2px;  
+  padding-left:2px;
+}
